b=384494 - fix testday comparison to remove bogus overlap warning

--- a/webtools/litmus/css/litmus.css
+++ b/webtools/litmus/css/litmus.css
@@ -1310,7 +1310,7 @@ legend {
 div.error {
         background-color: #dddddd;
         border: solid #bbbbbb 1px;
-        padding: 5px;
+        padding: 10px;
 }
 
 
